# stl-loader-for-raylib

./: .gitignore  CMakeLists.txt  README.MD
assets/: cube.stl  plane.mix  plane.stl  sphere.stl  triangle.stl  triangle2.stl
assets/enemy/: enemy.atlas  enemy.json
assets/hero/: hero.atlas  hero.json
html/: main.data  main.html  main.js  main.wasm  main.wasm.map
src/: main.c  stl_loader.h
src/screens/: game.h  main_menu.h
src/screens/game/: bullets.h  hero.h  types.h
src/utils/: assets.h  common.h  debug.h  spine_utils.h  stack.h  structs.h
